[tool.poetry]
name = "hw02"
version = "0.1.0"
description = ""
authors = ["VadymBoyko <109297726+VadymBoyko@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
